Rewrite the test to just, you know, test the new function!

--- a/project/app/table.org
+++ b/project/app/table.org
@@ -1,8 +1,8 @@
-hand statuses:
+hand completeness:
 * not all cards played
 * all
 
-who's looking:
+player has "seen" (at least some of) the board:
 * already or currently played that board
 * none of the above
 
