--- a/TODO.txt
+++ b/TODO.txt
@@ -15,7 +15,13 @@ IN PROGRESS:
   Next up: have the apibot maintain its own HandTranscript, with which it can ... wait for it ... come up with its own calls and plays.
   This also entails figuring out how to do a POST or a PUT via DRF.  Not at all obvious.
 
+* When I'm done playing a hand, let me see other tables' scores for this board.
+
+  `[h.xscript.final_score() for h in b1.hand_set.all() if h.is_complete]`
+
 STILL TODO:
+
+* Consider speeding up test_table_view by using a Django fixture to install a completed hand, rather than building it up one call and one play at a time.
 
 * A legend! The hand detail should explain that
   - the little downarrow is the trick's led card
@@ -27,10 +33,6 @@ STILL TODO:
 * Somehow visually distinguish cards of the trump suit? Glowing! Sparkles!
 
   https://www.perplexity.ai/search/using-css-or-bootstrap-how-can-A5U0WSQKTdS172ms6crEdQ
-
-* When I'm done playing a hand, let me see other tables' scores for this board.
-
-  `[h.xscript.final_score() for h in b1.hand_set.all() if h.is_complete]`
 
 * Read about django-eventstream, in particular: how does it ensure that events get delivered?  Picture this:
   - server sends event "foo".
