Note suspected slowness in get_xscript
    just t -k test_hand_visibility --profile-svg
=>
    10692472 function calls (10329609 primitive calls) in 18.894 seconds

It's not that get_xscript itself is particularly slow -- in fact I bent over backwards to make it fast -- but that test
invokes it one bazillion times.

--- a/TODO.txt
+++ b/TODO.txt
@@ -23,6 +23,8 @@ STILL TODO:
 
 * Consider speeding up test_table_view by using a Django fixture to install a completed hand, rather than building it up one call and one play at a time.
 
+* The frequent "count" calls in `hand.Hand.get_xscript` are slow -- the output of pytest-profile, says that we called "query:609:count" almost six thousand times in test_hand_visibility!
+
 * A legend! The hand detail should explain that
   - the little downarrow is the trick's led card
   - the sparkles indicate the winning card in the trick
