--- a/TODO.txt
+++ b/TODO.txt
@@ -25,6 +25,7 @@ IN PROGRESS:
 
 STILL TODO:
 
+* https://erics-work-mbp.tail571dc2.ts.net/hand/?played_by=1 shows "Page 1 of 7" at the bottom ... but the "next" and "last" links don't include the `?played_by=1` query thing :-(
 
 * The hand-event channel names are just integers.  This is annoying; instead of just "2", it should be something like "hand:2"
 
