Don't CD before running the bot.

--- a/TODO.txt
+++ b/TODO.txt
@@ -8,6 +8,9 @@ IN PROGRESS:
   Next up: have the apibot maintain its own HandTranscript, with which it can ... wait for it ... come up with its own calls and plays.
   This also entails figuring out how to do a POST or a PUT via DRF.  Not at all obvious.
 
+  TODOs for this item:
+  * something -- probably a one-shot docker container -- to start bots according to "Player.allow_bot_to_play_for_me" when the server comes up
+  * maybe clean up log messages about "cannot control service 1 because no such directory", when disabling the bot and the directory hasn't yet been created
 STILL TODO:
 
 * It seems wrong for "Table.next_board" to just plop you into a new tournament.  Perhaps I should require players to explicitly ask to join a tournament.
