--- a/TODO.txt
+++ b/TODO.txt
@@ -15,6 +15,10 @@ IN PROGRESS:
   * Any tournament that is complete is visible to everyone, anonymous or otherwise.
   Unfortunately this means that anonymous users cannot watch a hand in progress.
 
+  * After `just dcu` (commit c8a78a9), logged in as "bob", https://laptop.tail571dc2.ts.net/table/ shows (correctly)
+    Table 5 Hand 5 -- Board #2 (tournament 1), Neither side vulnerable, dealt by West: ('Sorry, bob, but you have not completely played board Board #2 (tournament 1), so later d00d', '-')
+    However when I click that link, it shows me the hand :-|  Granted, it shows me only West's cards, and I am indeed West; but still this seems inconsistent.
+
   Maybe for fun demo purposes, we can have a single table that's not part of a tournament, and whose boards are genuinely random?
 
 STILL TODO:
